--- a/package.json
+++ b/package.json
@@ -5,13 +5,7 @@
   "main": "optimized-server.js",
   "scripts": {
     "start": "node optimized-server.js",
-    "dev": "nodemon optimized-server.js",
-    "test": "npm run test:performance",
-    "test:performance": "node test/performance-test.js",
-    "monitor": "pm2 start optimized-server.js --watch --ignore-watch='node_modules' --name 'getinforsearch-optimized'",
-    "logs": "pm2 logs getinforsearch-optimized",
-    "restart": "pm2 restart getinforsearch-optimized",
-    "stop": "pm2 stop getinforsearch-optimized"
+    "dev": "nodemon optimized-server.js"
   },
   "keywords": [
     "ai",
@@ -32,24 +26,10 @@
     "node-cache": "^5.1.2",
     "compression": "^1.7.4",
     "helmet": "^7.1.0",
-    "rate-limiter-flexible": "^3.0.8"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.2",
-    "pm2": "^5.3.0",
-    "jest": "^29.7.0",
-    "supertest": "^6.3.3"
+    "rate-limiter-flexible": "^2.4.2"
   },
   "engines": {
     "node": ">=16.0.0",
     "npm": ">=8.0.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/getinforsearch/optimized.git"
-  },
-  "bugs": {
-    "url": "https://github.com/getinforsearch/optimized/issues"
-  },
-  "homepage": "https://getinforsearch.com"
+  }
 }
